# Disaster-Impact-Analysis-System

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  MODERNIZATION_PROGRESS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SESSION_SUMMARY.md  TICKET-0-TEST-DATA.md  TICKET-10-REST-API-DESIGN.md  TICKET-11-COMPLETE.md  pyproject.toml  pytest.ini  setup.py
dias/: requirements.txt
dias/core/: hyper_graph.py
dias/notebooks/: flood_model_test.py  flood_risk_model.ipynb  run_test.py
dias/notebooks/.ipynb_checkpoints/: flood_risk_model-checkpoint.ipynb
dias/scripts/: base_model.py  flood_model.py  simulate_model.py
dias/storage/: hyperdb.py  processdbf.py
dias/visual/: visualization.py
docs/: README.md
docs/migration/: NUMBA_TO_JAX_MIGRATION.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: README.md  docker-run.sh  format.sh  generate_test_data.py  lint.sh  test.sh  validate_test_data.py
src/: __init__.py
src/api/: __init__.py  main.py  models.py  storage.py
src/api/routes/: __init__.py  health.py  phenomena.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  jax_ops.py  model.py
src/core/base/: __init__.py  phenomenon.py
src/core/phenomena/: __init__.py  flood.py
src/core/visualization/: __init__.py  geojson.py
src/utils/: __init__.py
test_data/: README.md
tests/: __init__.py  test_hyper_graph.py  test_hyperdb.py.disabled  test_imports.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_base_phenomenon.py  test_flood_phenomenon.py  test_jax_ops.py  test_model.py  test_visualization_geojson.py
